--- a/index.html
+++ b/index.html
@@ -10,20 +10,31 @@
 
 <body>
     <div class="container">
-        
-      <div class="header">
 
+      <div class="header">
+        Header
       </div>
 
       <div class="sidebar">
-
+        Sidebar
       </div>
 
       <div class="main">
-
+        Main
       </div>
 
       <div class="footer">
+
+        <p>
+            Copyright ©
+  
+            <script>
+              document.write(new Date().getFullYear())
+            </script>
+
+          <a href="https://github.com/hbilgil" target="_blank"> Halil Bilgil </a>
+
+        </p>
 
       </div>
 
